<resources>
    <string name="app_name">BluetoothActivity</string>

    <string name="action_settings">Settings</string>

    <string name="mainActivityTitle">Bluetooth Activity</string>
    <string name="send_letter">Send Letter</string>
    <string name="progress_bar">Progress Bar</string>
    <string name="gesture_activity">Gesture</string>

    <string name="welcome_stm">Reset</string>
    <string name="led_test">LED ON/OFF</string>
    <string name="servo_control">Servo</string>
    <string name="distance_sensor">Distance</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <string name="connect">Connect a device</string>
    <string name="discoverable">Make discoverable</string>

</resources>
