<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".BluetoothActivity">

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="87dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/mainActivityTitle"
            android:id="@+id/textView"
            android:layout_row="0"
            android:layout_column="0"
            android:gravity="center"
            android:textSize="36sp"
            android:background="#ffc2c2c2" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="107dp"
            android:layout_row="1"
            android:layout_column="0" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:id="@+id/letterViewer"
            android:layout_row="2"
            android:layout_column="0"
            android:background="@drawable/backborder"
            android:autoText="false"
            android:text="Hello"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="30dp" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="227dp"
            android:layout_row="4"
            android:layout_column="0">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/led_test"
                android:id="@+id/ledBtn"
                android:layout_row="0"
                android:layout_column="0" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/servo_control"
                android:id="@+id/servoBtn"
                android:layout_row="1"
                android:layout_column="0" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/distance_sensor"
                android:id="@+id/distanceBtn"
                android:layout_row="2"
                android:layout_column="0" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_stm"
                android:id="@+id/resetBtn"
                android:layout_row="3"
                android:layout_column="0" />

        </GridLayout>

    </GridLayout>
</RelativeLayout>
